Version 2.02.99 - 
===================================
  Report partial and in-sync RAID attribute based on kernel status
  Fix blkdeactivate to handle nested mountpoints and mangled mount paths.
  Set locales with LC_ALL instead of lower priority LANG variable.
  Fix a crash-inducing race condition in lvmetad.
  Add log/debug_classes to lvm.conf to control debug log messages.
  Synchronize with udev in pvscan --cache and fix dangling udev_sync cookies.
  Fix autoactivation to not autoactivate VG/LV on each change of the PVs used.
  Limit RAID device replacement to repair only if LV is not in-sync.
  Disallow RAID device replacement or repair on inactive LVs.
  Fix possible race while removing metadata from lvmetad.
  Fix possible deadlock when querying and updating lvmetad at the same time.
  Check lvmcache_info_from_pvid and recall only when needed in _pv_read.
  Check for memory failure of dm_config_write_node() in lvmetad.
  Fix socket leak on error path in lvmetad's handle_connect.
  Check for failing id_read_format() in _pv_populate_lvmcache.
  Fix memleak on error path for lvmetad's pv_found.
  Unlock vg mutex in error path when lvmetad tries to lock_vg.
  Add check for key string duplication in config_make_nodes_v.
  Add check for created fid in _scan_file.
  Log output also to syslog when abort_on_internal_error is set.
  Add LV snapshot support to liblvm and python-lvm.
  Avoid a global lock in pvs when lvmetad is in use.
  Fix crash in pvscan --cache -aay triggered by non-mda PV.
  Allow lvconvert --stripes/stripesize only with --mirrors/--repair/--thinpool.
  Fix memleak in device_is_usable mirror testing function.
  Do not ignore -f in lvconvert --repair -y -f for mirror and raid volumes.
  Disallow pvmove on RAID LVs until they are addressed properly
  Allow empty activation/{auto_activation|read_only|}_volume_list config option.
  Add lvm.conf option global/thin_disabled_features.
  Add lvconvert support to swap thin pool metadata volume.